# RVC_Vibe-Coding

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  dcd.md  rollout-2026-05-17T15-51-09-019e34b3-f6f7-7cc1-9d9b-788d77cd57bd.jsonl  rollout-2026-05-17T23-34-00-019e365b-b66f-72b1-a15c-8c287b62cad3.jsonl  sonar-project.properties  test.txt
bindings/: rvc_module.cpp
commands/: build.sh  clean.sh  configure.sh  coverage.sh  format.sh  lint.sh  run-simulator.sh  run-system-tests.sh  run-tests.sh  run-unit-tests.sh  sonarqube.sh  static-analysis.sh  verify-all.sh
docs/: agent, skill 이외 지시사항 정리.md
docs/design/: design-specification.md
docs/requirements/: domain-model.md  srs.md  system-sequence-diagram.md  usecase-description.md  usecase-diagram.md  요구사항 완성 후 요약.md
docs/verification/: verification-summary.md
include/rvc/: AdapterTimer.hpp  CleaningManager.hpp  IAvoidStrategy.hpp  IObstacleAvoidanceStrategy.hpp  Interfaces.hpp  LegacyAdapters.hpp  MovementManager.hpp  RvcController.hpp  SensorSubjects.hpp  SimulatorApi.hpp  Types.hpp  cleaning_manager.hpp  default_avoid_strategy.hpp  dust_sensor_subject.hpp  i_cleaner.hpp  movement_manager.hpp  rvc_controller.hpp  timer.hpp
simulator/rvc_sim/: cli.py  runner.py
skills/design/: SKILL.md
skills/implementation/: SKILL.md
skills/requirements-analysis/: SKILL.md
skills/verification/: SKILL.md
src/: AdapterTimer.cpp  CleaningManager.cpp  LeftPriorityAvoidanceStrategy.cpp  LegacyAdapters.cpp  MovementManager.cpp  RvcController.cpp  RvcStates.cpp  SensorSubjects.cpp  SimulatorApi.cpp
tests/: TestDoubles.hpp  rvc_unit_tests.cpp
